# aoc2025

./: README.md  good_morning.py  justfile  pyproject.toml  test_good_morning.py
solutions/day01/: solution.py
solutions/day02/: solution.py
solutions/day03/: solution.py
solutions/day04/: solution.py
solutions/day05/: solution.py
solutions/day06/: solution.py
solutions/day07/: solution.py
solutions/day08/: solution.py
solutions/day09/: solution.py
solutions/day10/: solution.py
solutions/day11/: solution.py
solutions/day12/: solution.py
