[project]
name = "aoc2025"
version = "0.1.0"
description = "Advent of Code 2025"
readme = "README.md"
license = {text = "MIT License"}
authors = [
    { name = "Seto Balian", email = "seto.balian@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.1",
    "ipython>=9.7.0",
    "pyright>=1.1.407",
    "pytest>=9.0.1",
    "ruff>=0.14.7",
]

[tool.pyright]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = ["F", "E", "W", "I"]
